--- a/FrontEnd/Main Page/assets/css/styles.css
+++ b/FrontEnd/Main Page/assets/css/styles.css
@@ -108,6 +108,92 @@ body{
 	transform: translateY(-5px)!important;
 }
 
+.class_46{
+
+	width: 100%;
+	height: 140px;
+	background-color: rgb(255, 255, 255);
+	color: rgb(255, 255, 255);
+	left: 247px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-top: 0px;
+}
+
+.class_47{
+
+	width: 1355px;
+	height: 100px;
+	padding: 10px;
+	background-color: rgb(255, 255, 255);
+	color: rgb(255, 255, 255);
+	display: flex;
+	align-items: center;
+	
+}
+
+.class_48{
+
+	width: 100px;
+	height: 125px;
+	object-fit: cover;
+	margin-left:50px;
+	
+}
+
+.class_49{
+
+	width: 1171px;
+	height: 83px;
+	padding: 10px;
+	background-color: rgb(255, 255, 255);
+	color: rgb(255, 255, 255);
+	margin-left: 20px;
+	align-items: center;
+	display: flex;
+	justify-content: space-around;
+	
+}
+
+.class_50{
+
+	text-decoration: underline;
+	text-decoration: none;
+	color: rgb(0, 0, 0);
+	font-weight: bold;
+	font-size: 16px;
+	
+}
+
+.class_51{
+
+	text-decoration: none;
+	color: rgb(0, 0, 0);
+	font-weight: bold;
+	font-size: 16px;
+	
+}
+
+.class_52{
+	text-decoration: none;
+	color: rgb(0, 0, 0);
+	font-weight: bold;
+	font-size: 16px;
+	background-color: rgb(255, 255, 255);
+	
+}
+
+.class_53{
+
+	text-decoration: none;
+	color: rgb(0, 0, 0);
+	font-weight: bold;
+	font-size: 16px;
+	left: 1px;
+	
+}
+
 .class_1{
 
 	position: absolute;
@@ -377,6 +463,8 @@ body{
 .class_26{
 
 	padding: 5px;
+	color: black;
+	text-decoration: none;
 	
 }
 
@@ -418,6 +506,7 @@ body{
 	color: rgb(255, 255, 255);
 	padding: 20px;
 	
+	
 }
 
 .class_30{
@@ -436,13 +525,16 @@ body{
 	min-height: 200px;
 	vertical-align: top;
 	
+	
 }
 
 .class_32{
 
 	padding-left: 10px;
 	padding-right: 10px;
-	font-size: 47px;
+	font-size: 50px;
+	text-align:center;
+	margin-top:100px;
 	
 }
 
@@ -450,34 +542,13 @@ body{
 
 	padding: 10px;
 	font-size: 16px;
-	color: white;
+	text-align:justify;
 	
 
 }
 
 .class_34{
 
-	color: rgb(255, 255, 255);
-	
-}
-
-.class_35{
-
-	font-size: 20px;
-	padding: 20px;
-	border: medium none;
-	color: rgb(0, 0, 0);
-	background-color: rgb(255, 255, 255);
-	border-radius: 20px;
-	margin: 0.25rem 0.125rem;
-	cursor: pointer;
-	width: 177px;
-	
-}
-
-.class_36{
-
-	width: 100%;
 	max-width: 500px;
 	margin: 10px auto;
 	padding: 20px;
@@ -486,9 +557,10 @@ body{
 	text-align: center;
 	border-radius: 20px;
 	
+	
 }
 
-.class_37{
+.class_35{
 
 	padding-left: 10px;
 	padding-right: 10px;
@@ -496,7 +568,7 @@ body{
 	
 }
 
-.class_38{
+.class_36{
 
 	margin-top: 4px;
 	margin-bottom: 4px;
@@ -505,9 +577,10 @@ body{
 	 text-align: left;
 	font-size: 16px;
 	
+	
 }
 
-.class_39{
+.class_37{
 
 	margin: .5rem;
 	margin-left:0px;
@@ -515,7 +588,7 @@ body{
 	
 }
 
-.class_40{
+.class_38{
 
 	display: block;
 	width: 100%;
@@ -533,7 +606,7 @@ body{
 	
 }
 
-.class_41{
+.class_39{
 
 	display: block;
 	margin-top: 4px;
@@ -545,21 +618,45 @@ body{
 	
 }
 
-.class_42{
+.class_40{
 
 	min-width:50px;
 	margin: .5rem;
 	margin-left:0px;
 	display: inline-block;
 	
+	
 }
 
-.class_43{
+.class_41{
 
 	padding: 10px;
 	color: rgb(0, 0, 0);
 	text-align: left;
 	font-size: 16px;
+	
+}
+
+.class_42{
+
+	font-size: 16px;
+	padding: 20px;
+	border: medium none;
+	color: rgb(255, 255, 255);
+	background-color: rgb(13, 110, 253);
+	border-radius: 20px;
+	margin: 0.25rem 0.125rem;
+	cursor: pointer;
+	width: 100%;
+	
+}
+
+.class_43{
+
+	padding: 5px;
+	text-align:center;
+	margin-top:20px;
+	
 	
 }
 
@@ -586,6 +683,159 @@ body{
 	color: rgb(255, 255, 255);
 	left: 43px;
 	top: 2239px;
+	
+}
+
+.class_70{
+
+	width: 100vw;
+	 background-color: rgb(0, 0, 0);
+	color: rgb(255, 255, 255);
+	padding: 20px;
+	
+}
+
+.class_71{
+
+	display: flex;
+	flex-wrap: wrap;
+	max-width: 1200px;
+	margin: auto;
+	
+}
+
+.class_72{
+
+	flex: 1 1 0%;
+	min-width: 400px;
+	min-height: 200px;
+	vertical-align: top;
+	
+}
+
+.class_73{
+
+	padding-left: 10px;
+	padding-right: 10px;
+	font-size: 50px;
+	text-align:center;
+	margin-top:100px;
+	
+}
+
+.class_74{
+
+	padding: 10px;
+	font-size: 16px;
+	text-align:justify;
+	
+}
+
+.class_75{
+	max-width: 500px;
+	margin: 10px auto;
+	padding: 20px;
+	background-color: rgb(255, 255, 255);
+	color: rgb(0, 0, 0);
+	text-align: center;
+	border-radius: 20px;
+	
+}
+
+.class_76{
+
+	padding-left: 10px;
+	padding-right: 10px;
+	font-size: 30px;
+	
+}
+
+.class_77{
+
+	margin-top: 4px;
+	margin-bottom: 4px;
+	padding: 4px;
+	align-items: center;
+	 text-align: left;
+	font-size: 16px;
+	
+}
+
+.class_78{
+
+	margin: .5rem;
+	margin-left:0px;
+	display: inline-block;
+	
+}
+
+.class_79{
+
+	display: block;
+	width: 100%;
+	padding: 15px;
+	font-size: 1rem;
+	font-weight: 400;
+	line-height: 1.5;
+	color: rgb(33, 37, 41);
+	background-color: rgb(242, 242, 242);
+	background-clip: padding-box;
+	border: 1px solid rgb(206, 212, 218);
+	appearance: none;
+	border-radius: 20px;
+	transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s;
+	
+}
+
+.class_80{
+
+	display: block;
+	margin-top: 4px;
+	margin-bottom: 4px;
+	padding: 4px;
+	align-items: center;
+	 text-align: left;
+	font-size: 16px;
+	
+}
+
+.class_81{
+
+	min-width:50px;
+	margin: .5rem;
+	margin-left:0px;
+	display: inline-block;
+	
+}
+
+.class_82{
+
+	padding: 10px;
+	color: rgb(0, 0, 0);
+	text-align: left;
+	font-size: 16px;
+	
+}
+
+.class_83{
+
+	font-size: 16px;
+	padding: 20px;
+	border: medium none;
+	color: rgb(255, 255, 255);
+	background-color: rgb(13, 110, 253);
+	border-radius: 20px;
+	margin: 0.25rem 0.125rem;
+	cursor: pointer;
+	width: 100%;
+	
+}
+
+.class_84{
+
+	padding: 5px;
+	text-align:center;
+	margin-top:20px;
 	
 }
 
