--- a/FrontEnd/Complaint_Lodging/assets/css/styles.css
+++ b/FrontEnd/Complaint_Lodging/assets/css/styles.css
@@ -146,8 +146,12 @@ body{
 
 .class_10{
 
-	width: 100vw;
-	 background-color: white;
+    width: 100vw;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 	
 	
 }
@@ -160,8 +164,8 @@ body{
 	margin: auto;
 	text-align: center;
 	left: 375.369%;
-	box-shadow: 0px 0px 0px 2px;
-  backdrop-filter: blur(1px)
+	backdrop-filter: blur(1px);
+	margin-top:30px;
 	
 }
 
