--- a/FrontEnd/Missing_Person_Portal/assets/css/styles.css
+++ b/FrontEnd/Missing_Person_Portal/assets/css/styles.css
@@ -307,9 +307,14 @@ text-decoration:none;
 
 	width: 300px;
 	height: 200px;
-	object-fit: cover;
+	object-fit: contain;
 	border-radius: 30px;
 	
+}
+
+.misCard_cont{
+	display: flex;
+	flex-wrap: wrap;
 }
 
 .class_26{
@@ -336,23 +341,18 @@ text-decoration:none;
 }
 
 .class_28{
-
-	display: block;
 	width: 100%;
-	padding: 1em;
 	font-size: 1rem;
 	font-weight: 400;
-	line-height: 1.5;
 	color: rgb(33, 37, 41);
-	background-color: rgb(255, 255, 255);
-	background-clip: padding-box;
-	border: 1px solid rgb(206, 212, 218);
-	appearance: none;
 	border-radius: 0.375rem;
 	transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s;
-	left: 601.317%;
-	top: 1283px;
+	white-space: nowrap;
+	overflow: clip;
 	height: 28px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	
 }
 
