--- a/FrontEnd/Login page/style.css
+++ b/FrontEnd/Login page/style.css
@@ -1,172 +1,152 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins');
+:root{
+  font-size: 100%;
+  font-size: 16px;
+  line-height: 1.5;
+  --primary-blue: #233975;
+}
 
-*{
-  margin: 0;
+body{
   padding: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins';
-}
-
-section{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100vh;
-  background: url('bg.jpg') no-repeat;
-  background-size: cover;
-  background-position: center;
-  animation: animateBg 5s linear infinite;
-
-}
-
-.loginbox{
-  position: relative;
-  width: 400px;
-  height: 450px;
-  background: transparent;
-  border: 2px solid rgba(255, 255, 255, .5);
-  border-radius: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  backdrop-filter: blur(15px);
-  box-shadow: 0 0 25px #fff;
-  /*overflow: hidden;*/
-  transition: height .2s ease;
-  
-}
-
-.loginbox{
-  height: 520px;
-}
-
-.loginbox .form-box.login{
-  left: 0;
-  padding: 0 60px 0 40px;
-  transition: transform .18s ease;
-  transform: translateX(0);
-}
-
-.loginbox.active .form-box.login{
-  transition: none;
-  transform: translateX(-400px);
-}
-
-h2 {
-  font-size: 2em;
-  color: #fff;
-  text-align: center;
-  
-}
-
-.input-box{
-  position: relative;
-  width: 310px;
-  margin: 30px 0;
-  border-bottom: 2px solid #fff;
-  
-}
-
-.input-box label{
-  position: absolute;
-  top: 50%;
-  left: 5px;
-  transform: translateY(-50%);
-  font-size: 1em;
-  color: #fff;
-  pointer-events: none;
-  transition: .5s;
-  
-  
-}
-
-.input-box input:focus~label,
-.input-box input:valid~label{
-  top: -5px
-}
-
-.input-box input{
-  width: 100%;
-  height: 50px;
-  background: transparent;
-  border: none;
-  outline: none;
-  font-size: 1em;
-  color: #fff;
-  padding: 0 35px 0 5px;
-  
-}
-
-.input-box .icon{
-  position: absolute;
-  right: 8px;
-  color: #fff;
-  font-size: 1.2em;
-  line-height: 57px;
-
-}
-
-.remember-forget{
-  margin: -15px 0 15px;
-  font: .9em;
-  color: #fff;
-  display: flex;
-  justify-content:space-between;
-}
-
-.remember-forget label input{
-  margin-right: 3px;
-
-}
-
-.remember-forget a{
-  color: #fff;
-  text-decoration: none;
-}
-
-.remember-forget a:hover{
-  text-decoration: underline;
-}
-
-button {
-  width: 100%;
-  height: 40px;
-  background: #fff;
-  border: none;
-  outline: none;
-  border-radius: 40px;
-  cursor: pointer;
-  font-size: 1em;
-  color: #000;
+  margin: 0;
+  font-family: 'Montserrat','sans-serif';
   font-weight: 500;
-
 }
 
-.register-link {
-  font-size: .9em;
-  color: #fff;
-  text-align: center;
-  margin: 25px 0 10px;
+h1{
+  font-size: 2.25rem;
+  font-weight: 700;
 }
 
-.register-link p a {
-  color: #fff;
+h1{
+  font-size: 3.5rem;
+  font-weight: 700;
+}
+
+a{
   text-decoration: none;
-  font-weight: 600;
-
+  color: var(--primary-blue);
 
 }
 
-.register-link p a:hover{
+a:hover {
   text-decoration: underline;
 }
 
-.errMsg{
-  color: red;
-  width: 100%;
-  margin-top: 1rem;
+.small{
+  font-size: 80%;
   text-align: center;
 }
 
+.split-screen{
+  display: flex;
+  flex-direction: column;
+}
 
+.left{
+  height: 200px;
+}
+
+.left, .right{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.left{
+  background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.5)), url('2015531.webp');
+  background-size: cover;
+  background-color: rgba(255, 255, 255, 0.9);
+}
+
+.left .copy{
+  color: white;
+  text-align: center;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.left p{
+  Font-weight: 600;
+  TEXT-ALIGN: JUSTIFY;
+  MARGIN-LEFT: 30PX;
+  MARGIN-RIGHT: 30PX;
+}
+
+.right .copy{
+  color: black;
+  text-align: center;
+}
+
+.right .copy p{
+  margin: 1.5em 0;
+  font-size: 0.875rem;
+}
+
+.right form{
+  width: 400px;
+}
+
+form input[type="username"],
+form input[type="password"]{
+  display:block;
+  width: 100%;
+  box-sizing: border-box;
+  border-radius: 8px;
+  border: 1px solid #c4c4c4;
+  padding: 1em;
+  margin-bottom: 1.25rem;
+  font-size: 0.875rem;
+}
+
+label{
+  display:block;
+  margin-bottom: 0.5rem;
+  font-size: 0.75rem;
+}
+
+.input-container.password{
+  position:relative;
+}
+
+.input-container.password i{
+  position: absolute;
+  top: 42px;
+  right: 16px;
+}
+
+.login-btn{
+  display: block;
+  width: 100%;
+  background: var(--primary-blue);
+  color: white;
+  font-weight: 700;
+  border: none;
+  padding: 1rem;
+  border-radius: 8px;
+  font-size: 0.75rem;
+  text-transform: uppercase;
+  letter-spacing: 0.5px;
+}
+
+.login-btn:hover{
+  background: #2c4893;
+  cursor: pointer;
+}
+
+@media screen and (min-width: 900px){
+  .split-screen{
+    flex-direction: row;
+    height: 100vh;
+  }
+  .left,
+  .right{
+    display: flex;
+    width: 50%;
+    height: auto;
+  }
+}
+
+.logo img {
+  width: 100px; 
+  height: auto;
+}
