--- a/FrontEnd/Missing_Person_Portal/assets/css/styles.css
+++ b/FrontEnd/Missing_Person_Portal/assets/css/styles.css
@@ -315,6 +315,9 @@ text-decoration:none;
 .misCard_cont{
 	display: flex;
 	flex-wrap: wrap;
+	width: 100%;
+	justify-content: space-around;
+	align-items: center;
 }
 
 .class_26{
@@ -459,6 +462,7 @@ text-decoration:none;
 	 background-color: rgb(0, 0, 0);
 	color: rgb(255, 255, 255);
 	padding: 20px;
+	font-family:'Open Sans';
 	
 }
 
